# cooper-station

./: .gitignore  CLAUDE_CODE_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE_SUMMARY.md  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: module-contribution.md  physics-error.md  simulation-proposal.md
.github/workflows/: ci.yml  pages.yml
docs/: reddit-posts.md
engine/: Cargo.toml  README.md
engine/src/: atmosphere.rs  coriolis.rs  gravity.rs  lib.rs  station.rs  structure.rs  wasm.rs
modules/: MODULE_TEMPLATE.md
modules/01-structure/: SPEC.md
modules/02-rotation-gravity/: SPEC.md
modules/03-atmosphere-eclss/: SPEC.md
modules/04-agriculture/: SPEC.md
modules/05-power-systems/: SPEC.md
modules/06-radiation-shielding/: SPEC.md
modules/07-habitat/: SPEC.md
modules/08-transportation/: SPEC.md
modules/09-communications/: SPEC.md
modules/10-industrial/: SPEC.md
modules/11-docking-ports/: SPEC.md
modules/12-command-control/: SPEC.md
scripts/: create-issues.sh  setup-repo.sh
simulations/: cooper-station-dashboard.jsx
web/: dashboard.html  index.html
