[package]
name = "cooper-engine"
version = "0.1.0"
edition = "2021"
description = "Physics simulation engine for Cooper Station — O'Neill Cylinder space habitat"
license = "MIT"
repository = "https://github.com/zheimr/cooper-station"
keywords = ["space", "simulation", "oneill-cylinder", "physics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
wasm = ["wasm-bindgen"]

[profile.release]
opt-level = 3
lto = true
